# clownassembler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clownassembler-flex.l  dictionary.c  dictionary.h  frontend_asm68k.c  frontend_custom.c  io.c  io.h  lexer.c  lexer.h  lexical.c  lexical.h  lexical.l  main.c  options.c  options.h  p2bin.c  p2bin.h  parser.c  parser.h  semantic.c  semantic.h  shared-memory.c  shared-memory.h  spl.l  spl.y  strcmpci.c  strcmpci.h  string-stack.c  string-stack.h  string.c  string.h  substitute.c  substitute.h  symbols.c  symbols.h  (+4 more)
cpp/: CMakeLists.txt  clownassembler.cpp  clownassembler.h
tests/: misc.asm  shim.asm  valid instructions.asm
tests/68-katy-basic/: Basic68k3.41.inc  Basic68s3.52.x68
tests/hash/: clownmd5.h  hash.c
tests/instructions/MOVE_TO_SR/: valid.asm
tests/instructions/MOVE_TO_SR/invalid/: 1.asm  2.asm  3.asm  4.asm  5.asm
tests/previously-crashing/: cnop-size-boundary-0.asm  comment-line-followed-by-erroring-line.asm  define-global-label-then-redefine-at-sign-as-macro-twice.asm  div-by-0.asm  macro-infinite-recursion.asm  mod-by-0.asm  purge-macro.asm  redefine-macro-as-another-macro-while-it-is-being-expanded.asm  redefine-macro-in-macro-body.asm  redefine-macro-parameter-in-macro-body.asm  redefinition-during-mutually-recursive-infinite-macro-expansion.asm  shift-by-massive-val.asm  shift-no-args.asm  substr-out-of-bounds.asm
tests/previously-leaking/: equal-with-trailing-garbage-identifier.asm  inform-with-complex-severity-expression.asm  label-definition-followed-by-redefinition-as-macro-with-code-line.asm  label-definition-followed-by-redefinition-as-macro-with-parameter.asm  label-definition-followed-by-redefinition-as-macro.asm  multiple-unterminated-repts.asm  unterminated-rept-and-while.asm
